--- a/Vehicle dataset from cardekho/Car Prediction.ipynb
+++ b/Vehicle dataset from cardekho/Car Prediction.ipynb
@@ -10,19 +10,188 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": 3
+   "version": "3.8.3-final"
   },
-  "orig_nbformat": 2
+  "orig_nbformat": 2,
+  "kernelspec": {
+   "name": "python3",
+   "display_name": "Python 3"
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2,
  "cells": [
   {
+   "source": [
+    "# PROJECT : Car Price Prediction \n",
+    "### DATASET : Car Dekho Dataset from Kaggle\n",
+    "### LINK : https://www.kaggle.com/nehalbirla/vehicle-dataset-from-cardekho"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "### Importing required libraries and dataset "
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd \n",
+    "import numpy as np \n",
+    "import matplotlib.pyplot as plt \n",
+    "import seaborn as sns "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv(\"Dataset/car data.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "  Car_Name  Year  Selling_Price  Present_Price  Kms_Driven Fuel_Type  \\\n",
+       "0     ritz  2014           3.35           5.59       27000    Petrol   \n",
+       "1      sx4  2013           4.75           9.54       43000    Diesel   \n",
+       "2     ciaz  2017           7.25           9.85        6900    Petrol   \n",
+       "3  wagon r  2011           2.85           4.15        5200    Petrol   \n",
+       "4    swift  2014           4.60           6.87       42450    Diesel   \n",
+       "\n",
+       "  Seller_Type Transmission  Owner  \n",
+       "0      Dealer       Manual      0  \n",
+       "1      Dealer       Manual      0  \n",
+       "2      Dealer       Manual      0  \n",
+       "3      Dealer       Manual      0  \n",
+       "4      Dealer       Manual      0  "
+      ],
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Car_Name</th>\n      <th>Year</th>\n      <th>Selling_Price</th>\n      <th>Present_Price</th>\n      <th>Kms_Driven</th>\n      <th>Fuel_Type</th>\n      <th>Seller_Type</th>\n      <th>Transmission</th>\n      <th>Owner</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>ritz</td>\n      <td>2014</td>\n      <td>3.35</td>\n      <td>5.59</td>\n      <td>27000</td>\n      <td>Petrol</td>\n      <td>Dealer</td>\n      <td>Manual</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>sx4</td>\n      <td>2013</td>\n      <td>4.75</td>\n      <td>9.54</td>\n      <td>43000</td>\n      <td>Diesel</td>\n      <td>Dealer</td>\n      <td>Manual</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>ciaz</td>\n      <td>2017</td>\n      <td>7.25</td>\n      <td>9.85</td>\n      <td>6900</td>\n      <td>Petrol</td>\n      <td>Dealer</td>\n      <td>Manual</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>wagon r</td>\n      <td>2011</td>\n      <td>2.85</td>\n      <td>4.15</td>\n      <td>5200</td>\n      <td>Petrol</td>\n      <td>Dealer</td>\n      <td>Manual</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>swift</td>\n      <td>2014</td>\n      <td>4.60</td>\n      <td>6.87</td>\n      <td>42450</td>\n      <td>Diesel</td>\n      <td>Dealer</td>\n      <td>Manual</td>\n      <td>0</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "metadata": {},
+     "execution_count": 5
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "source": [
+    "Basic Data Visualization like shape, size, categorical values, type of values, null values."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "(301, 9)"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 12
+    }
+   ],
+   "source": [
+    "df.shape \n",
+    "#this shows that there are 301 rows or entries and 9 column in our dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "Car_Name         0\n",
+       "Year             0\n",
+       "Selling_Price    0\n",
+       "Present_Price    0\n",
+       "Kms_Driven       0\n",
+       "Fuel_Type        0\n",
+       "Seller_Type      0\n",
+       "Transmission     0\n",
+       "Owner            0\n",
+       "dtype: int64"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 13
+    }
+   ],
+   "source": [
+    "df.isnull().sum()\n",
+    "#this shows that there are no null values in our dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[0 1 3]\n['Petrol' 'Diesel' 'CNG']\n['Dealer' 'Individual']\n['Manual' 'Automatic']\n"
+     ]
+    }
+   ],
+   "source": [
+    "#run this to see the difference df[\"Owner\"].unique()\n",
+    "print(df[\"Owner\"].unique()) \n",
+    "print(df[\"Fuel_Type\"].unique()) \n",
+    "print(df[\"Seller_Type\"].unique()) \n",
+    "print(df[\"Transmission\"].unique())  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "0    290\n",
+       "1     10\n",
+       "3      1\n",
+       "Name: Owner, dtype: int64"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 6
+    }
+   ],
+   "source": [
+    "df[\"Owner\"].value_counts()"
+   ]
   }
  ]
 }
