--- a/Vehicle dataset from cardekho/Car Prediction.ipynb
+++ b/Vehicle dataset from cardekho/Car Prediction.ipynb
@@ -741,7 +741,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#now dataset is splitted into two categories its time to create a model"
+   ]
   },
   {
    "cell_type": "code",
