--- a/All Space Missions from 1957/spacenotebook.ipynb
+++ b/All Space Missions from 1957/spacenotebook.ipynb
@@ -253,6 +253,13 @@
    "metadata": {}
   },
   {
+   "source": [
+    "### 2.1 Space Company vs. # Launches"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
@@ -278,6 +285,20 @@
     "plt.tight_layout()\n",
     "plt.show()"
    ]
+  },
+  {
+   "source": [
+    "## 2.2 Country vs. # Launches"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
