--- a/All Space Missions from 1957/spacenotebook.ipynb
+++ b/All Space Missions from 1957/spacenotebook.ipynb
@@ -23,6 +23,13 @@
  "cells": [
   {
    "source": [
+    "# 🚀 Visualizing the Space Race"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
     "## 1. Introduction"
    ],
    "cell_type": "markdown",
