--- a/All Space Missions from 1957/spacenotebook.ipynb
+++ b/All Space Missions from 1957/spacenotebook.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "source": [
-    "## 1. Introduction"
+    "### 1. Introduction"
    ],
    "cell_type": "markdown",
    "metadata": {}
