--- a/IRIS-DATASET/iris_dataset_EDA.ipynb
+++ b/IRIS-DATASET/iris_dataset_EDA.ipynb
@@ -460,7 +460,18 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from sklearn.svm import LinearSVC\n",
+    "\n",
+    "model = LinearSVC(C=10)\n",
+    "model.fit(X_train_std_S,y_train_S)\n",
+    "print('Training Accuracy Sepal = {}'.format(model.score(X_train_std_S, y_train_S)))\n",
+    "print('Testing  Accuracy Sepal = {}'.format(model.score(X_test_std_S, y_test_S)))\n",
+    "\n",
+    "model.fit(X_train_std_P,y_train_P)\n",
+    "print('\\nTraining Accuracy Petal = {}'.format(model.score(X_train_std_P, y_train_P)))\n",
+    "print('Testing  Accuracy Petal = {}'.format(model.score(X_test_std_P, y_test_P)))"
+   ]
   }
  ]
 }
